// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-input-textarea Should render with args {
  label: 'label',
  identifier: 'identifier',
  readonly: true,
  labelOnTop: true,
  tooltip: 'Tooltip message'
}: 1`] = `
<mg-input-textarea>
  <mock:shadow-root>
    <div class="mg-input mg-input--label-on-top mg-input--readonly mg-input--textarea">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <strong></strong>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-textarea>
`;

exports[`mg-input-textarea Should render with args {
  label: 'label',
  identifier: 'identifier',
  readonly: true,
  value: 'blu'
}: 1`] = `
<mg-input-textarea value="blu">
  <mock:shadow-root>
    <div class="mg-input mg-input--readonly mg-input--textarea">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <strong>
          blu
        </strong>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-textarea>
`;

exports[`mg-input-textarea Should render with args {
  label: 'label',
  identifier: 'identifier',
  tooltip: 'My Tooltip Message'
}: 1`] = `
<mg-input-textarea>
  <mock:shadow-root>
    <div class="mg-input mg-input--textarea">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input"><textarea aria-describedby="" id="identifier" maxlength="4000" name="identifier" rows="3"></textarea>
          <mg-tooltip identifier="identifier-tooltip" message="My Tooltip Message">
            <mg-icon icon="info-circle"></mg-icon>
          </mg-tooltip>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-textarea>
`;

exports[`mg-input-textarea Should render with args {
  label: 'label',
  identifier: 'identifier',
  tooltip: 'My Tooltip Message',
  labelOnTop: true
}: 1`] = `
<mg-input-textarea>
  <mock:shadow-root>
    <div class="mg-input mg-input--label-on-top mg-input--textarea">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <mg-tooltip identifier="identifier-tooltip" message="My Tooltip Message">
        <mg-icon icon="info-circle"></mg-icon>
      </mg-tooltip>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input"><textarea aria-describedby="" id="identifier" maxlength="4000" name="identifier" rows="3"></textarea>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-textarea>
`;

exports[`mg-input-textarea Should render with args { label: 'label', identifier: 'identifier' }: 1`] = `
<mg-input-textarea>
  <mock:shadow-root>
    <div class="mg-input mg-input--textarea">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input"><textarea aria-describedby="" id="identifier" maxlength="4000" name="identifier" rows="3"></textarea>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-textarea>
`;

exports[`mg-input-textarea Should render with args { label: 'label', identifier: 'identifier', labelHide: true }: 1`] = `
<mg-input-textarea>
  <mock:shadow-root>
    <div class="mg-input mg-input--textarea">
      <mg-input-title class="sr-only" identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input"><textarea aria-describedby="" id="identifier" maxlength="4000" name="identifier" rows="3"></textarea>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-textarea>
`;

exports[`mg-input-textarea Should render with args { label: 'label', identifier: 'identifier', labelOnTop: true }: 1`] = `
<mg-input-textarea>
  <mock:shadow-root>
    <div class="mg-input mg-input--label-on-top mg-input--textarea">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input"><textarea aria-describedby="" id="identifier" maxlength="4000" name="identifier" rows="3"></textarea>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-textarea>
`;

exports[`mg-input-textarea Should render with args { label: 'label', identifier: 'identifier', readonly: true }: 1`] = `
<mg-input-textarea>
  <mock:shadow-root>
    <div class="mg-input mg-input--readonly mg-input--textarea">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <strong></strong>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-textarea>
`;

exports[`mg-input-textarea Should trigger events 1`] = `
<mg-input-textarea>
  <mock:shadow-root>
    <div class="is-focused mg-input mg-input--textarea">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input"><textarea aria-describedby="identifier-character-left identifier-help-text" id="identifier" maxlength="4000" name="identifier" rows="3"></textarea>
        </div>
        <mg-character-left identifier="identifier-character-left" maxlength="4000"></mg-character-left>
        <div class="mg-input__input-container__help-text" id="identifier-help-text">
          My help text
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-textarea>
`;
